tests/core_functions/color/hsl/error/three_args/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hsl/error/three_args"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::set_precision;

// Ignoring "hue_type", tests with expected error not implemented yet.

// Ignoring "lightness_type", tests with expected error not implemented yet.

// Ignoring "saturation_type", tests with expected error not implemented yet.
